tests/baselines/reference/parserInterfaceDeclaration4.errors.txt
parserInterfaceDeclaration4.ts(1,1): error TS1044: 'static' modifier cannot appear on a module or namespace element.


==== parserInterfaceDeclaration4.ts (1 errors) ====
    static interface I {
    ~~~~~~
!!! error TS1044: 'static' modifier cannot appear on a module or namespace element.
    }